--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "homepage": "https://github.com/harshan92/MyKikApp#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dependable": "^1.1.0",
     "ejs": "^3.0.2",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "loadash": "^1.0.0"
   }
 }
