--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dependable": "^1.1.0",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
+    "express-promise-router": "^3.0.3",
     "loadash": "^1.0.0"
   }
 }
